--- a/priv/static/templates/credentials.html.eex
+++ b/priv/static/templates/credentials.html.eex
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <h1>Configure FarmBot</h1>
+    <h1>Configure FarmLab</h1>
     <h2><%= subtitle %></h2>
 
     <div class="widget">
