--- a/priv/static/templates/network.html.eex
+++ b/priv/static/templates/network.html.eex
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Configure Farmbot's Network </title>
+    <title> Configure FarmLab's Network </title>
     <link rel="stylesheet" href="/styles.css">
     <script type="text/javascript">
     function select_interface() {
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <h1>Configure FarmBot</h1>
+    <h1>Configure FarmLab</h1>
     <h2><%= subtitle %></h2>
 
     <%= if last_reset_reason
