--- a/priv/static/templates/firmware.html.eex
+++ b/priv/static/templates/firmware.html.eex
@@ -61,7 +61,7 @@
   </script>
 
   <body>
-    <h1>Configure FarmBot</h1>
+    <h1>Configure FarmLab</h1>
     <h2><%= subtitle %></h2>
 
     <div class="widget">
