--- a/priv/static/templates/index.html.eex
+++ b/priv/static/templates/index.html.eex
@@ -6,12 +6,12 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Configure Farmbot Version <%= version %> </title>
+    <title> Configure FarmLab Version <%= version %> </title>
     <link rel="stylesheet" href="/styles.css">
   </head>
 
   <body>
-    <h1>Configure FarmBot</h1>
+    <h1>Configure FarmLab</h1>
     <h2><%= subtitle %></h2>
 
     <div class="widget">
